5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1613_2049.log
== TEST (2019-04-04 18:07:58) 
-- CODE:
dividendo=int(input=("x"))
divisor=int(input=("y"))
print(dividendo)
print(divisor)
quociente=dividendo/divisor
print(quociente)
resto=dividendo%divisor
print(resto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dividendo=int(input=("x"))
TypeError: 'input' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:08:27) 
-- CODE:
dividendo=(int(input=("x"))
divisor=(int(input=("y"))
print(dividendo)
print(divisor)
quociente=dividendo/divisor
print(quociente)
resto=dividendo%divisor
print(resto)
-- ERROR:
File "XXXX", line 2
    divisor=(int(input=("y"))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:09:06) 
-- CODE:
dividendo=int(input=("x"))
divisor=int(input=("y"))
print(dividendo)
print(divisor)
quociente=dividendo/divisor
print(quociente)
resto=dividendo%divisor
print(resto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dividendo=int(input=("x"))
TypeError: 'input' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:10:04) 
-- CODE:
dividendo=int(input("numero x"))
divisor=int(input("numero y"))
print(dividendo)
print(divisor)
quociente=dividendo/divisor
print(quociente)
resto=dividendo%divisor
print(resto)
-- OUTPUT:
8
5
1.6
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:10:32) 
-- CODE:
dividendo=int(input("numero x"))
divisor=int(input("numero y"))
print(dividendo)
print(divisor)
quociente=dividendo/divisor
print(quociente)
resto=int(dividendo%divisor)
print(resto)
-- OUTPUT:
8
5
1.6
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:10:53) 
-- CODE:
dividendo=int(input("numero x"))
divisor=int(input("numero y"))
print(dividendo)
print(divisor)
quociente=int(dividendo/divisor)
print(quociente)
resto=int(dividendo%divisor)
print(resto)
-- EXECUTION TIME:
0.153781
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:10:57) 
-- CODE:
dividendo=int(input("numero x"))
divisor=int(input("numero y"))
print(dividendo)
print(divisor)
quociente=int(dividendo/divisor)
print(quociente)
resto=int(dividendo%divisor)
print(resto)

-- EXECUTION TIME:
0.153723
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:10:59) 
-- CODE:
dividendo=int(input("numero x"))
divisor=int(input("numero y"))
print(dividendo)
print(divisor)
quociente=int(dividendo/divisor)
print(quociente)
resto=int(dividendo%divisor)
print(resto)

-- EXECUTION TIME:
0.126948
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
numero xnumero y8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
numero xnumero y14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
numero xnumero y347
2
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:11:02) 
-- CODE:
dividendo=int(input("numero x"))
divisor=int(input("numero y"))
print(dividendo)
print(divisor)
quociente=int(dividendo/divisor)
print(quociente)
resto=int(dividendo%divisor)
print(resto)

-- EXECUTION TIME:
0.155134
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
